# magic_enum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md
examples/: main.cpp
include/: magic_enum.hpp
tests/: test_magic_enum.cpp
